Configuracion para Github Pages

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	 initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Portafolio de FalconMasters</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
 	<header>
@@ -32,7 +32,7 @@
 		<section class="acerca-de">
 			<div class="contenedor">
 				<div class="foto">
-					<img src="img/foto.jpg" width="115" height="115" alt="Carlos Arturo">
+					<img src="./img/foto.jpg" width="115" height="115" alt="Carlos Arturo">
 				</div>
 				
 				<div class="texto">
@@ -47,7 +47,7 @@
 				<div class="contenedor-trabajos">
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/1.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/1.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -56,7 +56,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/2.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/2.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -65,7 +65,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/3.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/3.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -74,7 +74,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/4.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/4.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -83,7 +83,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/5.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/5.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -92,7 +92,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/6.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/6.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -101,7 +101,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/7.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/7.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
@@ -110,7 +110,7 @@
 					</div>
 					<div class="trabajo">
 						<div class="thumb">
-							<img src="img/trabajos/8.jpg" alt="Lorem Ipsum">
+							<img src="./img/trabajos/8.jpg" alt="Lorem Ipsum">
 						</div>
 						<div class="descripcion">
 							<p class="nombre">Lorem Ipsum</p>
